[gd_scene load_steps=8 format=3 uid="uid://ceu84vp2wxqf4"]

[ext_resource type="Script" uid="uid://b8o0pp5itfxlc" path="res://Scripts/player_agent.gd" id="1_xpcyc"]
[ext_resource type="Texture2D" uid="uid://io3ubbd4vgs7" path="res://Assets/kenney_simple-space/PNG/Default/ship_K.png" id="2_cuawo"]
[ext_resource type="PackedScene" uid="uid://4andm52wqxrg" path="res://Scenes/blaster.tscn" id="3_luvb1"]
[ext_resource type="Texture2D" uid="uid://82fudosh0htl" path="res://Assets/kenney_simple-space/PNG/Default/icon_crossSmall.png" id="4_0mddh"]
[ext_resource type="PackedScene" uid="uid://diqufprq06hg2" path="res://Scenes/air_blast.tscn" id="5_myq56"]
[ext_resource type="AudioStream" uid="uid://cytidrb0hqeuw" path="res://Assets/Custom/better_air_sound.mp3" id="6_5mumi"]
[ext_resource type="AudioStream" uid="uid://diokx52q4apqe" path="res://Assets/Custom/146770__qubodup__rocket-boost-engine-loop.mp3" id="7_joqcb"]

[node name="Spaceship" type="RigidBody2D"]
mass = 2.0
gravity_scale = 0.0
linear_damp = 1.2
angular_damp = 0.2
script = ExtResource("1_xpcyc")
engine_thrust = 1000.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(18, 24, 2, -24, -16, 25, 7.43094e-07, 17)

[node name="Main_Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_cuawo")

[node name="GhostContainer" type="Node2D" parent="."]
position = Vector2(2, 0)

[node name="Agent_Sprite" type="Sprite2D" parent="GhostContainer"]
position = Vector2(0, -1)
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite2" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite3" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite4" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite5" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite6" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite7" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Agent_Sprite8" type="Sprite2D" parent="GhostContainer"]
texture = ExtResource("2_cuawo")

[node name="Blaster" parent="." instance=ExtResource("3_luvb1")]

[node name="Thrusters" type="Node2D" parent="."]
position = Vector2(6, 19)

[node name="IconCrossSmall" type="Sprite2D" parent="Thrusters"]
z_index = -1
position = Vector2(-13.5258, -10.7521)
rotation = 2.3562
scale = Vector2(0.526255, 0.246)
texture = ExtResource("4_0mddh")

[node name="IconCrossSmall2" type="Sprite2D" parent="Thrusters"]
z_index = -1
position = Vector2(1.47416, -10.7521)
rotation = 2.39488
scale = Vector2(0.272147, 0.525118)
texture = ExtResource("4_0mddh")

[node name="Air_Blast_Right" parent="." instance=ExtResource("5_myq56")]
position = Vector2(8, 10)

[node name="Air_Blast_Left" parent="." instance=ExtResource("5_myq56")]
position = Vector2(-10, 10)
rotation = 3.14159

[node name="AirHissPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5mumi")
volume_db = -30.422
pitch_scale = 1.09
parameters/looping = true

[node name="Booster_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_joqcb")
volume_db = -15.38
pitch_scale = 0.86
parameters/looping = true
